--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Build generated
-build/
+# build/
 DerivedData/
 
 ## Various settings
